Add typed parameters and value calls